--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>My Wild Seed Portrait </h1>
-<img src="wildseedhw.jpg">
-<a href="index.html">Back to main page</a>
+<!DOCTYPE HTML>
+<html>
+  <p> This is my first webpage</p>
+  <body>
+  <img src="virtual landscape.jpg"height="400">
+  <h1>This my Intro to New Media page.</h1>
+    <p>From this page you can access all my homework for HUW 112</p>
+    <ul>
+      <li><a href="wildseedportrait.html">Here is to my Wildseed Portrait</a></li>
+      
+      </body>
+ </html>  
