--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 
-  <title>First website</title>
+  <title>Hello Github</title>
 
    <body>
 
-    <h1>This is my first github page</h1>
+    <h1>orlando flores</h1>
 
   </body>
 </html>
